<?xml version="1.0" encoding="UTF-8"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

<!--
    Use /script/update-version.sh X.Y.Z
    to update all relevant poms and metadatas
-->

    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.taximaxim.codeKeeper</groupId>
    <artifactId>ru.taximaxim.codeKeeper</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>ru.taximaxim.codekeeper.core</module>
        <module>ru.taximaxim.codekeeper.core.tests</module>
        <module>ru.taximaxim.codekeeper.ui</module>
        <module>ru.taximaxim.codekeeper.ui.tests</module>
        <module>ru.taximaxim.codekeeper.cli</module>
        <module>ru.taximaxim.codekeeper.cli.tests</module>
        <module>ru.taximaxim.codekeeper.mainapp</module>
        <module>ru.taximaxim.codekeeper.mainapp/report</module>
        <module>ru.taximaxim.codekeeper.mainapp/feature</module>
        <module>ru.taximaxim.codekeeper.mainapp/updatesite</module>
        <module>ru.taximaxim.codekeeper.mainapp/product/rcp</module>
        <module>ru.taximaxim.codekeeper.mainapp/product/standalone</module>
        <module>ru.taximaxim.codekeeper.mainapp/deploy</module>
    </modules>

    <properties>
        <revision>10.0.0-SNAPSHOT</revision>
        <ui.revision>5.0.0-SNAPSHOT</ui.revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <target.definition.file>app</target.definition.file>

        <sonar.language>java</sonar.language>
        <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
        <sonar.java.source>${java.version}</sonar.java.source>
        <sonar.java.target>${java.version}</sonar.java.target>
        <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
        <sonar.junit.reportPath>${project.build.directory}/surefire-reports/</sonar.junit.reportPath>
        <sonar.exclusions>**/*.sql, **/*.xml, **/generated/**, **/Messages.java</sonar.exclusions>

        <java.version>17</java.version>
        <tycho.version>4.0.7</tycho.version>
        <jacoco.version>0.8.12</jacoco.version>
        <antlr.version>4.13.1</antlr.version>
        <maven.surefire.version>3.2.5</maven.surefire.version>
        <maven.enforcer.version>3.4.1</maven.enforcer.version>
        <maven.jarsigner.version>3.0.0</maven.jarsigner.version>

        <keystore>/tmp/keystore.jks</keystore>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
            <properties>
                <target.definition.file>app</target.definition.file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>${maven.jarsigner.version}</version>
                        <configuration>
                            <keystore>${keystore}</keystore>
                            <alias>pgCodeKeeper</alias>
                            <storepass>pgCodeKeeper</storepass>
                            <keypass>pgCodeKeeper</keypass>
                            <arguments>
                                <argument>-sigalg</argument>
                                <argument>SHA512withRSA</argument>
                            </arguments>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.version}</version>
                        <executions>
                            <!-- to avoid bugs in some situations -->
                            <execution>
                                <id>default-prepare-agent</id>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <!-- create report during maven verify phase -->
                            <execution>
                                <id>report</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-report-plugin</artifactId>
                        <version>${maven.surefire.version}</version>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireMavenVersion>
                            <version>3.9</version>
                        </requireMavenVersion>
                    </rules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <target>
                        <artifact>
                            <groupId>ru.taximaxim.codeKeeper</groupId>
                            <artifactId>ru.taximaxim.codeKeeper</artifactId>
                            <version>${revision}</version>
                            <classifier>ru.taximaxim.codekeeper.mainapp/${target.definition.file}</classifier>
                        </artifact>
                    </target>
                    <pomDependencies>consider</pomDependencies>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                    <dependency-resolution>
                        <!-- workaround for split package import
                             allows core to not require any bundles -->
                        <extraRequirements>
                            <requirement>
                                <type>eclipse-plugin</type>
                                <id>org.eclipse.core.runtime</id>
                                <versionRange>[3.4.0,4.0.0)</versionRange>
                            </requirement>
                        </extraRequirements>
                    </dependency-resolution>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!-- disable default install and deploy goals globally -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>default-install</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>default-deploy</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
